--- a/application/mobile/view/user/edit_address.html
+++ b/application/mobile/view/user/edit_address.html
@@ -36,7 +36,7 @@
 						<label>手机号码</label><input type="number" id="phone" placeholder="输入手机号码" value="{$info.mobile ?? ''}"/>
 					</div>
 					<div class="item site">
-						<label>收货地址</label><input type="text" readonly placeholder="点击选择地区" id="myAddrs" class="publicTROInputMN" name="addr" data-key="19-289-3044" value="{$info.area}" />
+						<label>收货地址</label><input type="text" readonly placeholder="点击选择地区" id="myAddrs" class="publicTROInputMN" name="addr" data-key="{$info.key}" value="{$info.area ?? ''}" />
 						<img src="__STATIC__/img/example/youjian@2x.png"/>
 					</div>
 					<div class="item detail">
@@ -147,7 +147,6 @@
 				//点击保存按钮获取页面数据
 				$(".saveBtn").click(function(){
 					let name=$("#name").val();
-					// let phone=$("#phone").val();
 					let myAddrs=$("#myAddrs").val();
 					let myAdd=$("#myAddrs").attr('data-key');
 					let site=$("#site").val();
