--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -47,7 +47,7 @@
                         <img src="__IMAGES__goods/{$info.thumb}" alt="">
                     </div>
                     <div class="item-name">
-                        <span style="font-size:.3rem;">{$info.name}</span>
+                        <span class="name">{$info.name}</span>
                     </div>
                     <div class="item-price">
                         <p class="price">￥{$info.price}</p>
@@ -149,5 +149,7 @@
     <script src="__STATIC__/js/public/public.js"></script>
     <script src="__STATIC__/js/purchase/order.js"></script>
 </body>
-
+<script>
+        
+</script>
 </html>
