--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -88,9 +88,9 @@
 					</p>
 				</a>
 				{else/}
-				<a href="javascript:void(0);" class="store_item shou active">
+				<a href="javascript:void(0);" class="store_item shou">
 					<p class="item_img">
-						<img src="__STATIC__/img/purchase/product/collection-r@2x.png" alt="">
+						<img class="active" src="__STATIC__/img/purchase/product/collection-r@2x.png" alt="">
 					</p>
 					<p class="item_name" id="focus">
 						收藏
@@ -104,7 +104,7 @@
 		</div>
 	</body>
 	<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
-	<!-- <script type="text/javascript" src="__STATIC__/lib/layer/2.4/layer.js"></script> -->
+	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 	<script src="__STATIC__/js/public/swiper.js"></script>
 	<script src="__STATIC__/js/public/public.js"></script>
 	<script src="__STATIC__/js/purchase/product.js"></script>
@@ -133,11 +133,14 @@
 
 					success: function (data) {
 						if (data.status == 1) {
-								acc.children().children().attr('src', '/__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
+								
+							layer.msg(data.msg, { time: 1000 },function () {
+                                     acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
+							})								
 						} else {
-							// layer.msg(data.msg, { icon: 2, time: 1000 }, function () {
+							layer.msg(data.msg,function () {
 
-							// })
+							})
 						}
 
 					},
@@ -151,11 +154,15 @@
                     
 					success: function (data) {
 						if (data.status == 1) {
-								acc.children().children().attr('src', '/__STATIC__/img/purchase/product/collection-r@2x.png').addClass('active')
-								location.reload()
+							layer.msg(data.msg, { time: 1000 },function () {
+								acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection-r@2x.png').addClass('active')
+							})	
 								// layer.msg(data.msg)
 						} else {
 							// layer.msg(data.msg)
+							layer.msg(data.msg,function () {
+
+							})							
 						}
 
 					},
