我的套用模板

--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -37,20 +37,20 @@
 
 			<!--中间-->
 			<ul style="width: 92%;margin-left: 4%; ">
-				<li onclick="window.location.href='my_order.html'">
+				<li onclick="window.location.href='/mobile/user/my_order'">
 					<img src="__STATIC__/img/my/dingdan@2x.png" class="img1" />
 					<a>我的订单</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onClick="window.location.href='mydistribution.html'">
+				<li onClick="window.location.href='/mobile/user/distribution'">
 
 					<img class="img1" src="__STATIC__/img/my/fenxiao@2x.png" />
 					<a >我的分销</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onClick="window.location.href='mywalet.html'">
+				<li onClick="window.location.href='/mobile/user/my_walet'">
 
 				  
 					<img class="img1" src="__STATIC__/img/my/qianbao@2x.png" />
@@ -65,14 +65,14 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onclick="window.location.href='my_favorite.html'">
+				<li onclick="window.location.href='/mobile/user/collection'">
 
 					<img class="img1" src="__STATIC__/img/my/aixin@2x.png" />
 					<a>我的收藏</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onclick="window.location.href='my_evaluate.html'">
+				<li onclick="window.location.href='/mobile/user/evaluation'">
 
 					<img class="img1" src="__STATIC__/img/my/pingjia@2x.png" />
 					<a>我的评价</a>
@@ -86,7 +86,7 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onclick="window.location.href='qr_code_zp.html'">
+				<li onclick="window.location.href='/mobile/user/coupons'">
 
 					<img class="img1" src="__STATIC__/img/my/youhuiquan@2x.png" />
 					<a>我的优惠券</a>
