--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -24,13 +24,22 @@
             <span>确认订单</span>
         </div>
         <!-- main -->
+        <!-- 数据提交 -->
+        <form name="cart2_form" id="cart2_form" method="post">
+            <!-- 用户信息 -->
+            <!-- 商品信息 -->
+            <!-- 备注 -->
+            <!-- 应付金额 -->
+           <input type="hidden" name="price" value="">
+        </form>
+
         <div class="personal-main">
             <!-- personal -->
             <div class="personal-list" onclick="pageJump('../my/my_site.html')">
                 <div class="item-msg">
                     <p class="compellation">
-                        <span class="name">闰土</span>
-                        <span class="phone">139452926926</span>
+                        <span class="name">{$nickname}</span>
+                        <span class="phone">{$mobile}</span>
                     </p>
                     <p class="location">
                         广东省广州市番禺区荷光路快递收藏路15栋28层
