--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -38,11 +38,11 @@
             <div class="personal-list" onclick="pageJump('../my/my_site.html')">
                 <div class="item-msg">
                     <p class="compellation">
-                        <span class="name">{$nickname}</span>
-                        <span class="phone">{$mobile}</span>
+                        <span class="name">{$user_info['nickname']}</span>
+                        <span class="phone">{$user_info['mobile']}</span>
                     </p>
                     <p class="location">
-                        广东省广州市番禺区荷光路快递收藏路15栋28层
+                        {$dizhi}
                     </p>
                 </div>
                 <div class="item-img">
@@ -85,7 +85,7 @@
                     </div>
                     <div class="balance" style="display: none">
                         <input type="hidden" value="">
-                        <input type="text" disabled value="可用余额:￥6000000" class="balance_text">
+                        <input type="text" disabled value="可用余额:￥{$info.price}" class="balance_text">
                     </div>
                 </div>
                 <div class="mode zfmm" style="display: none">
@@ -159,6 +159,27 @@
     <script src="__STATIC__/js/purchase/order.js"></script>
 </body>
 <script>
-        
+    $('.sumb').click(function () {
+        $.ajax({
+            type: 'post',
+            url: "{:url('mobile/goods/focus')}",
+            data: { 'id': id, 'act': 'cancel' },
+
+            success: function (data) {
+                if (data.status == 1) {
+
+                    layer.msg(data.msg, { time: 1000 }, function () {
+                        acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
+                    })
+                } else {
+                    layer.msg(data.msg, function () {
+
+                    })
+                }
+
+            },
+
+        });        
+    })   
 </script>
 </html>
