--- a/application/mobile/view/article/details.html
+++ b/application/mobile/view/article/details.html
@@ -30,7 +30,7 @@
            <!-- 底部点赞、评论 -->
            <div class="bottom-bar">
                <div class="operation-bar">
-                    <span class="praiseBtn">
+                    <span class="praiseBtn" onclick="javaScript:like('{$info.id}')">
                         <i class="praise-icon"></i>
                         <em class="num">20</em>
                     </span>
@@ -42,9 +42,9 @@
            </div>
 
 		</div>
-
         <script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
         <script src="__STATIC__/js/public/public.js"></script>
+        <script src="__STATIC__/js/example/like.js"></script>
         <script src="__STATIC__/js/home/index.js"></script>
 	</body>
 </html>
