--- a/application/mobile/view/article/micro.html
+++ b/application/mobile/view/article/micro.html
@@ -29,7 +29,7 @@
                             <div class="text">
                                 <h3><a href="/mobile/article/details?id={$vo.id}&type=1">{$vo.title}</a></h3>
                                 <div class="operation-bar">
-                                    <span class="praiseBtn">
+                                    <span class="praiseBtn {eq name='$vo.is_like' value='1'} praised {/eq}" onclick="javaScript:like('{$vo.id}')">
                                         <i class="praise-icon"></i>
                                         <em class="num">{$vo.star}</em>
                                     </span>
@@ -48,11 +48,10 @@
                     {/volist}
                 </ul>
             </div>
-
-		</div>
-
+        </div>
         <script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
         <script src="__STATIC__/js/public/public.js"></script>
+        <script src="__STATIC__/js/example/like.js"></script>
         <script src="__STATIC__/js/home/index.js"></script>
 	</body>
 </html>
