--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -51,7 +51,7 @@
 						<div class="volume">
 							<div class="sales">销量:<span id="salesNum">{$info.sold}</span></div>
 							
-							<div class="area">{$address}</div>
+							<!-- <div class="area">{//$address}</div> -->
 						</div>
 					</div>
 				</div>
