评论套用模板

--- a/application/mobile/view/article/micro.html
+++ b/application/mobile/view/article/micro.html
@@ -34,8 +34,10 @@
                                         <em class="num">{$vo.star}</em>
                                     </span>
                                     <span class="commentBtn">
-                                        <i class="discuss-icon"></i>
-                                        <em class="num">{$vo.comment}</em>
+                                        <a href="/mobile/article/comment?id={$vo.id}&type=1">
+                                            <i class="discuss-icon"></i>
+                                            <em class="num">{$vo.comment}</em>
+                                        </a>
                                     </span>
                                 </div>
                             </div>
