--- a/application/mobile/view/user/my_address.html
+++ b/application/mobile/view/user/my_address.html
@@ -33,7 +33,7 @@
 							<div class="btn clearfloat">
 								<div class="btn_right">
 									<span class="edit"><a href="/mobile/user/edit_address?id={$vo.id}">编辑</a></span>
-									<span class="del" onclick="javaScript:del('{$vo.id}')">删除</span>
+									<span class="del" data-id="{$vo.id}" data-url="{:url('mobile/user/handle_address',['id'=>$vo['id']])}" onclick="javaScript:del('{$vo.id}')">删除</span>
 								</div>
 							</div>
 						</div>
@@ -46,18 +46,25 @@
 		</div>
 		<script type="text/javascript" src="__STATIC__/js/public/public.js"></script>
 		<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
+		<script type="text/javascript" src="__PUBLIC__/public/jquery.min.js"></script>
+    	<script type="text/javascript" src="__PUBLIC__/public/layer/layer.js"></script>
 		<script type="text/javascript">
 			function del(id){
-				if (confirm('你确定要删除吗？')) {
+				layer.confirm('你确定要删除该条数据吗?', {icon: 3, title:'删除提示'}, function(index){
+					loading = layer.load(2, {
+						shade: [0.2,'#000']
+					});			  
 					$.post('/mobile/user/handle_address',{type:'del',id:id},function(res){
 						if(res.code == 1){
-							alert('删除成功！');
-							window.location.href = "/mobile/user/my_address";
-						} else {
-							alert('删除失败！');
+							layer.msg('删除成功！',{icon:1,time:1000},function(){
+								window.location.href = "/mobile/user/my_address";
+							});
+						}else{
+							layer.close(loading);
+							layer.msg('删除失败！', {icon: 2, anim: 6, time: 1000});
 						}
 					});
-				}
+				});
 			}
 		</script>
 	</body>
