--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -55,6 +55,18 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- coupon -->
+				<div class="coupon">
+					<span class="cou_ll">优惠券</span>
+					<div class="coupon_site">
+						<span class="receive_ll">领劵</span>
+						<span class="goright">
+							<img src="__STATIC__/img/purchase/back-a@2x.png" alt="">
+						</span>
+					</div>
+				</div>
+
 				<!-- particulars -->
 				<div class="particulars_box">
 					<div class="particulars_item">
@@ -100,6 +112,75 @@
 				<span class="store_buy" onclick="pageJump('{:url('goods/order',array('id'=>$info.id))}')">
                       立即购买
                 </span>
+			</div>
+			<div class="receive_coupon" style="display: none;"></div>
+			<div class="receive_box">
+				<p class="receive_tit">领取优惠券</p>
+				<div class="coupon_box">
+					<div class="coupon_list">
+						<div class="coupon_msg">
+							<div class="price_box">
+								￥
+								<span class="price">100</span>
+								<span class="original">满599减100</span>
+							</div>
+							<p class="pro_ori">商品优惠卷</p>
+							<p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+						</div>
+						<div class="coupon_use ">
+							<p class="use">立即领取</p>
+							<!-- <img src="../../img/purchase/logo@2x.png" alt="" class="been"> -->
+						</div>
+					</div>
+					<div class="coupon_list">
+						<div class="coupon_msg">
+							<div class="price_box">
+								￥
+								<span class="price">100</span>
+								<span class="original">满599减100</span>
+							</div>
+							<p class="pro_ori">商品优惠卷</p>
+							<p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+						</div>
+						<div class="coupon_use">
+							<p class="use">立即领取</p>
+						</div>
+					</div>
+					<div class="coupon_list">
+						<div class="coupon_msg">
+							<div class="price_box">
+								￥
+								<span class="price">100</span>
+								<span class="original">满599减100</span>
+							</div>
+							<p class="pro_ori">商品优惠卷</p>
+							<p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+						</div>
+						<div class="coupon_use">
+							<p class="use">立即领取</p>
+						</div>
+					</div>
+					<div class="coupon_list">
+						<div class="coupon_msg">
+							<div class="price_box">
+								￥
+								<span class="price">100</span>
+								<span class="original">满599减100</span>
+							</div>
+							<p class="pro_ori">商品优惠卷</p>
+							<p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+						</div>
+						<div class="coupon_use">
+							<p class="use">立即领取</p>
+						</div>
+					</div>
+				</div>
+				<div class="popup">
+					领取成功
+				</div>
+				<div class="achieve">
+					完成
+				</div>
 			</div>
 		</div>
 	</body>
