--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -24,29 +24,8 @@
             <span>确认订单</span>
         </div>
         <!-- main -->
-        <!-- 数据提交 -->
-        <form name="cart_form" id="cart_form" method="post">
-            <!-- 用户信息 -->
-            <input type="hidden" name="user_id" value="{$user_info['id']}">
-            <input type="hidden" name="nickname" value="{$user_info['nickname']}">
-            <input type="hidden" name="province" value="">
-            <input type="hidden" name="city" value="">
-            <input type="hidden" name="district" value="">
-            <input type="hidden" name="address" value="">
-            <input type="hidden" name="pay_name" value="">
-            <input type="hidden" name="goods_price" value="">
-            <!-- 邮费 -->
-            <input type="hidden" name="shipping_price" value="">
-            <input type="hidden" name="user_money" value="">
-            <!-- 使用优惠券 -->
-            <input type="hidden" name="coupon_price" value="">
-            <!-- 应付金额 -->
-            <input type="hidden" name="order_amount" value="">
-            <!-- 订单总价 -->
-            <input type="hidden" name="total_amount" value="">
-            <input type="hidden" name="user_note" value="">
 
-        </form>
+
 
         <div class="personal-main">
             <!-- personal -->
@@ -57,7 +36,7 @@
                         <span class="phone">{$user_info['mobile']}</span>
                     </p>
                     <p class="location">
-                        {$dizhi}
+                        {$get_address['dizhi']}
                     </p>
                 </div>
                 <div class="item-img">
@@ -100,14 +79,38 @@
                     </div>
                     <div class="balance" style="display: none">
                         <input type="hidden" value="">
-                        <input type="text" disabled value="可用余额:￥{$info.price}" class="balance_text">
+                        <input type="text" disabled value="可用余额:￥{$user_info.money}" class="balance_text">
                     </div>
                 </div>
                 <div class="mode zfmm" style="display: none">
                     <div class=" pwd">支付密码:</div>
                     <div class="balance">
-                        <form action="" method="post">
-                            <input type="password" value class="pwdnum" placeholder="请输入支付密码" required="required"
+                        <form name="cart_form" id="cart_form" method="post">
+                            <!-- 数据提交 -->
+                            <!-- 用户信息 -->
+                            <input type="hidden" name="user_id" value="{$user_info['id']}">
+                            <input type="hidden" name="nickname" value="{$user_info['nickname']}">
+                            <input type="hidden" name="province" value="{$get_address['province']}">
+                            <input type="hidden" name="city" value="{$get_address['city']}">
+                            <input type="hidden" name="district" value="{$get_address['district']}">
+                            <input type="hidden" name="address" value="{$get_address['address']}">
+                            <!-- <input type="hidden" name="pay_name" value=""> -->
+                            <!-- 商品价 -->
+                            <input type="hidden" name="goods_price" value="{$info.price}">
+                            <!-- 邮费 -->
+                            <input type="hidden" name="shipping_price" value="{$s_price}">
+                            <!-- <input type="text" name="user_money" id="user_money" value=""> -->
+                            <!-- 使用优惠券 -->
+                            <!-- <input type="hidden" name="coupon_price" value=""> -->
+                            <!-- 应付金额 -->
+                            <input type="hidden" name="order_amount" id="order_amount" value="">
+                            <!-- 订单总价 -->
+                            <input type="hidden" name="total_amount" id="total_amount" value="">
+                            <input type="hidden" name="user_note" value="">
+                            <!-- <input type="text" name="pay_password" id="pay_password" value=""> -->
+                            <!-- 可用余额 -->
+                            <input type="hidden" name="remain" value="{$user_info.money}">                           
+                            <input type="password" value='' name="pay_password" class="pwdnum" id="pay_password" placeholder="请输入支付密码"
                                 autocomplete />
                         </form>
                     </div>
@@ -118,8 +121,13 @@
                 <div class="mode mode-yhq">
                     <div class=" yhq">优惠券</div>
                     <div class="discount">
-                        <div class="yhqq">
+                        <div class="yhqq numm" >
                             <span class="discount_num">0</span> 张可用
+                        </div>
+                        <div class="yhqq man" style="margin-left: 1.5rem; display: none">
+                            <span>
+                                <span class="discount_num">满599减100</span>
+                            </span>
                         </div>
                     </div>
                     <div class="select usable">
@@ -128,15 +136,16 @@
                 </div>
                 <div class="mode mode-bz">
                     <div class=" bz">备注</div>
-                    <textarea name="" id="" cols="103" rows="10" placeholder="暂无备注!" class="remark"></textarea>
+                    <textarea name="note" id="note" cols="103" rows="10" placeholder="暂无备注!" class="remark"></textarea>
                 </div>
             </div>
+                        
             <!-- favourable price -->
             <div class="favourable">
                 <div class="favourable_item">
                     <div class="item_name">邮费:</div>
                     <div>
-                        ￥ <span class="postage">{$price}</span>
+                        ￥ <span class="postage">{$s_price}</span>
                     </div>
                 </div>
                 <div class="favourable_item">
@@ -158,7 +167,76 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <!-- receive a coupon -->
+            <div class="receive_coupon" style="display: none;"></div>
+            <div class="receive_box">
+                <p class="receive_tit">领取优惠券</p>
+                <div class="coupon_box">
+                    <div class="coupon_list">
+                        <div class="coupon_msg">
+                            <div class="price_box">
+                                ￥
+                                <span class="price">100</span>
+                                <span class="original">满599减100</span>
+                            </div>
+                            <p class="pro_ori">商品优惠卷</p>
+                            <p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+                        </div>
+                        <div class="coupon_use ">
+                            <p class="use">立即使用</p>
+                            <!-- <img src="../../img/purchase/logo@2x.png" alt="" class="been"> -->
+                        </div>
+                    </div>
+                    <div class="coupon_list">
+                        <div class="coupon_msg">
+                            <div class="price_box">
+                                ￥
+                                <span class="price">100</span>
+                                <span class="original">满599减100</span>
+                            </div>
+                            <p class="pro_ori">商品优惠卷</p>
+                            <p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+                        </div>
+                        <div class="coupon_use">
+                            <p class="use">立即使用</p>
+                        </div>
+                    </div>
+                    <div class="coupon_list">
+                        <div class="coupon_msg">
+                            <div class="price_box">
+                                ￥
+                                <span class="price">100</span>
+                                <span class="original">满599减100</span>
+                            </div>
+                            <p class="pro_ori">商品优惠卷</p>
+                            <p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+                        </div>
+                        <div class="coupon_use">
+                            <p class="use">立即使用</p>
+                        </div>
+                    </div>
+                    <div class="coupon_list">
+                        <div class="coupon_msg">
+                            <div class="price_box">
+                                ￥
+                                <span class="price">100</span>
+                                <span class="original">满599减100</span>
+                            </div>
+                            <p class="pro_ori">商品优惠卷</p>
+                            <p class="time publicEllipsis">2019.20.20-2019.20.20</p>
+                        </div>
+                        <div class="coupon_use">
+                            <p class="use">立即使用</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="popup">
+                    使用成功
+                </div>
+                <div class="achieve">
+                    完成
+                </div>
+            </div>
         <!-- footer -->
         <div class="footer">
             <div class="price_box">
@@ -170,6 +248,7 @@
         </div>
     </div>
     <script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
+    <script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script src="__STATIC__/js/public/public.js"></script>
     <script src="__STATIC__/js/purchase/order.js"></script>
 </body>
@@ -177,8 +256,8 @@
     $('.sumb').click(function () {
         $.ajax({
             type: 'post',
-            url: "{:url('mobile/goods/focus')}",
-            data: { 'id': id, 'act': 'cancel' },
+            url: "{:url('mobile/goods/orderForm')}",
+            data: $('#cart_form').serialize(),
 
             success: function (data) {
                 if (data.status == 1) {
@@ -187,7 +266,7 @@
                         acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
                     })
                 } else {
-                    layer.msg(data.msg, function () {
+                    layer.msg(data.msg, { time: 1000 }, function () {
 
                     })
                 }
@@ -195,7 +274,17 @@
             },
 
         });
-    })   
+    })
+    
+    function pwd(){
+        alert('aaa')
+        // $('#pay_password').val(this.val())
+    }
+    // $(".pwdnum").click(function(this) {
+    //     alert('aaa')
+    //     // $('.pay_password').val(this.val())
+    // });
+
 </script>
 
 </html>
