--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -252,7 +252,34 @@
 			}
 
 		})		
-		
+
+	// $('#buy').click(function () {
+	// 	var id = {$info.id}
+	// 	console.log(id)
+	// 	return false
+	// 	$.ajax({
+	// 		type: 'post',
+	// 		url: "{:url('mobile/goods/order')}",
+	// 		data: { 'id': id, 'act': 'focus' },
+
+	// 		success: function (data) {
+	// 			if (data.status == 1) {
+	// 				layer.msg(data.msg, { time: 1000 }, function () {
+	// 					acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection-r@2x.png').addClass('active')
+	// 				})
+	// 				// layer.msg(data.msg)
+	// 			} else {
+	// 				// layer.msg(data.msg)
+	// 				layer.msg(data.msg, function () {
+
+	// 				})
+	// 			}
+
+	// 		},
+
+	// 	});		    	
+	// })
+
 	</script>
 
 </html>
