--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -265,13 +265,14 @@
 
             success: function (data) {
                 if (data.status == 1) {
-
-                    layer.msg(data.msg, { time: 1000 }, function () {
-                        
+                    layer.msg(data.msg, { time: 1000 }, function () {    
                         // acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
                     })
                 }else if(data.status == -1){
-                    window.location.href = '/mobile/user/my_address'
+                    layer.msg(data.msg, { time: 1000 }, function () {
+                        window.location.href = '/mobile/user/my_address'
+                        // acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
+                    })                    
                 }else {
                     layer.msg(data.msg, { time: 1000 }, function () {
 
