--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -39,7 +39,7 @@
 					<!--右-->
 					<div class="loginPTRightU">
 						<!--input-->
-						<input type="text" class="loginPTRInput" placeholder="请输入邮箱" />
+						<input type="text" class="loginPTRInput" id="email" placeholder="请输入邮箱" />
 					</div>
 				</div>
 				<!--登录public输入框=>项-->
@@ -49,7 +49,7 @@
 					<!--右-->
 					<div class="loginPTRightU">
 						<!--input-->
-						<input type="password" class="loginPTRInput" placeholder="请输入密码" />
+						<input type="password" class="loginPTRInput" id="password" placeholder="请输入密码" />
 					</div>
 				</div>
 				<!--登录public输入框=>项-->
@@ -59,10 +59,10 @@
 					<!--输入框-->
 					<div class="loginPTRightU">
 						<!--验证码 input-->
-						<input type="text" class="loginCode" placeholder="请输入右图验证码" maxlength="6" />
+						<input type="text" class="loginCode" id="captcha" placeholder="请输入右图验证码" maxlength="6" />
 						<!--验证码 box-->
 						<p class="code_box">
-							<img class="loginCodeImg" src="__STATIC__/img/public/0002.png"/>
+							<img class="loginCodeImg" onclick="Refresh_Captcha();" id="img-captcha" src="{:captcha_src()}"/>
 						</p>
 					</div>
 					
@@ -80,7 +80,7 @@
 			</div>
 			<!--'登录' 按钮-->
 			<div class="loginButtonBox">
-				<p class="loginButton">登录</p>
+				<p class="loginButton" onclick="submit();">登录</p>
 			</div>
 			
 			<!--第三方登陆-->
@@ -95,7 +95,52 @@
         
         <script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
         <script src="__STATIC__/js/public/public.js"></script>
-    
+        <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
+		<script>
+		
+
+			var re_email = /^[A-Za-z\d]+([-_.][A-Za-z\d]+)*@([A-Za-z\d]+[-.])+[A-Za-z\d]{2,4}$/;
+			var re_pass = /^([A-Za-z\d.]){6,20}$/;
+
+			function submit(){
+				var email = $('#email').val();
+				var password = $('#password').val();
+				var captcha = $('#captcha').val();
+
+				if(!re_email.test(email)){
+					layer.msg('邮箱错误！',{icon:5});
+					return false;
+				}
+				if(!re_pass.test(password)){
+					layer.msg('密码错误！',{icon:5});
+					return false;
+				}
+				if(!captcha){
+					layer.msg('验证码不能为空！',{icon:5});
+					return false;
+				}
+
+				$.post('/mobile/index/login',{email:email,password:password,captcha:captcha},function(res){
+
+					if(res.status == 1){
+						layer.msg(res.msg,{icon:6});
+						setTimeout(function(){
+							window.location.href = res.url;
+						},1500);
+					}else{
+						layer.msg(res.msg,{icon:5});
+						Refresh_Captcha();
+					}
+				});
+			}
+
+			function Refresh_Captcha(){
+				var timestamp = (new Date()).getTime();
+				var url = '/captcha.html?t='+timestamp;
+				$('#img-captcha').attr('src',url);
+			}
+		
+		</script>
     
     </body>
 </html>
