--- a/application/admin/view/goods/add_coupon.html
+++ b/application/admin/view/goods/add_coupon.html
@@ -22,11 +22,10 @@
 </style>
 <div class="page-container">
     <form action="" method="post" class="form form-horizontal" target="ajaxR-from">
-
-        <input type="hidden" id="goods_id" name="goods_id"
+        <!-- <input type="hidden" id="goods_id" name="goods_id"
             value='{if condition="isset($info)"}{$info.id}{else /}0{/if}'>
         <input type="hidden" id="category_id" name="category_id"
-            value='{if condition="isset($info)"}{$info.cate_id}{else /}0{/if}'>
+            value='{if condition="isset($info)"}{$info.cate_id}{else /}0{/if}'> -->
 
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>优惠券名称：</label>
@@ -37,14 +36,13 @@
         </div>
 
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>优惠券名称：</label>
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>指定商品：</label>
+
             <div class="formControls col-xs-8 col-sm-9">
             <span class="">
-                <a href="javascript:;" onclick="goods_add('添加商品分类','{:url('admin/goods/add_coupon')}','1360','800')"
-                    class="btn btn-primary radius">
-                    <i class="Hui-iconfont">&#xe600;</i>
-                    添加商品分类
-                </a>
+                <a style="color:blue;" id="select_coupon_goods" onclick="select_coupon_goods();" data-id="">选择商品</a>
+                <!-- <input type="hidden" name="goods_name" id="goods_name" value=""> -->
+                <input type="hidden" name="goods_id" id="goods_id" value="">
             </span>
             </div>
 
@@ -52,50 +50,38 @@
 
 
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2">使用期限：</label>
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>使用期限：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" name="price" id="" placeholder="使用额度" {if condition="isset($info)" }
+                <input type="text" name="term" id="" placeholder="使用期限" {if condition="isset($info)" }
                     value="{$info.price}" {/if} class="input-text" style="width:90%">
                 天</div>
         </div>
   
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2">使用额度：</label>
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>使用额度：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" name="price" id="" placeholder="使用额度" {if condition="isset($info)" }
+                <input type="text" name="quota" id="" placeholder="使用额度" {if condition="isset($info)" }
                     value="{$info.price}" {/if} class="input-text" style="width:90%">
                 元</div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2">券额：</label>
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>券额：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" name="self_price" id="" placeholder="商品原价" {if condition="isset($info)" }
+                <input type="text" name="money" id="" placeholder="商品原价" {if condition="isset($info)" }
                     value="{$info.self_price}" {/if} class="input-text" style="width:90%">
                 元</div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>领取限制：</label>
+            <label class="form-label col-xs-4 col-sm-2">领取限制：</label>
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
-                <input type="text" name="stock" id="stock" placeholder="领取限制" {if condition="isset($info)" }
-                    value="{$info.stock}" {else /}value="0" {/if} class="input-text" style="width:150px;">
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <div class="radio-box">
-                    <input type="checkbox" id="is_stock" value="0" name="is_stock" {if
+                <input type="text" name="limit" id="limit" placeholder="领取限制" {if condition="isset($info)" }
+                    value="{$info.stock}" {else /}value="1" {/if} class="input-text" style="width:150px;">
+                <p style="font-size:12px;color:#b1b1b1;">0或者留空为不限制</p>
+                <!-- <div class="radio-box">
+                    <input type="checkbox" id="is_limit" value="0" name="is_limit" {if
                         condition="isset($info) && $info.is_stock eq 0" }checked{/if}> <label
                         for="is_stock">无限制</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-2">有效截止时间：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" {literal}
-                    onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',minDate:'#F{$dp.$D(\'datemin\')}' })"
-                    {/literal} {if condition="isset($info) && $info.limit_etime gt 0" }
-                    value="{$info.limit_etime|date='Y-m-d H:i:s',###}" {/if} id="datemax" name="limit_etime"
-                    class="input-text Wdate" style="width:180px;">
-                <p style="font-size:12px;color:#b1b1b1;">商品类型为 “促销” 或 “限时” 时必填，其余类型无效。</p>
+                </div> -->
             </div>
         </div>
         <div class="row cl">
@@ -103,14 +89,38 @@
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
                 <div class="radio-box">
                     <input type="radio" id="status-1" value="0" name="status" {if
-                        condition="(isset($info) && $info.status eq 0) or !isset($info)" }checked{/if}>
-                    <label for="status-1">正常</label>
+                        condition="(isset($info) && $info.status eq 0) or !isset($info)" }checked{/if}> <label
+                        for="status-1">正常</label>
                 </div>
                 <div class="radio-box">
                     <input type="radio" id="status-2" value="1" name="status" {if condition="isset($info) && $info.status eq 1"
                         }checked{/if}> <label for="status-2">已失效</label>
                 </div>
+        
+            </div>
+        </div>
 
+        <div class="row cl" style="display:none">
+            <label class="form-label col-xs-4 col-sm-2">活动开始时间：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" {literal}
+                    onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}' })"
+                    {/literal} {if condition="isset($info) && $info.limit_stime gt 0" }
+                    value="{$info.limit_stime|date='Y-m-d H:i:s',###}" {/if} id="datemin" name=""
+                    class="input-text Wdate" style="width:180px;">
+                <p style="font-size:12px;color:#b1b1b1;">商品类型为 “促销” 或 “限时” 时必填，其余类型无效。</p>
+            </div>
+        </div>
+
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>有效截止时间：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" {literal}
+                    onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',minDate:'#F{$dp.$D(\'datemin\')}' })"
+                    {/literal} {if condition="isset($info) && $info.limit_etime gt 0" }
+                    value="{$info.limit_etime|date='Y-m-d H:i:s',###}" {/if} id="datemax" name="deadline"
+                    class="input-text Wdate" style="width:180px;">
+                <p style="font-size:12px;color:#b1b1b1;">商品类型为 “促销” 或 “限时” 时必填，其余类型无效。</p>
             </div>
         </div>
 
@@ -124,7 +134,7 @@
             </div>
     </form>
 </div>
-
+<iframe name="ajaxR-from" style="display: none;"></iframe>
 {include file="layout/footer"}
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
@@ -145,10 +155,18 @@
             error(msg);
         }
     }
-		/*商品-增加*/
-		function goods_add(title, url, w, h) {
-			layer_show(title, url, w, h,true);
-		}
+
+    /*商品-增加*/
+    function select_coupon_goods(title, url, w, h) {
+        layer.open({
+            title:'选择优惠券指定商品',
+            type:2,
+            content: '/admin/goods/select_coupon_goods',
+            area:['1200px','700px'],
+        });
+        // layer_show(title, url, w, h,false);
+    }
+
     function del_up_image(obj) {
         layer.confirm('确认要删除图片么？', { icon: 3, title: '提示' }, function (index) {
             $(obj).parent('a').remove();
@@ -209,9 +227,12 @@
         });
     }
 
-    function open_callback(name, id) {
-        $('#goods_category').html(name);
-        $('#category_id').val(id);
+    function open_callback(name,id) {
+        $('#select_coupon_goods').html(name);
+        $('#select_coupon_goods').attr('data-id',id);
+        $('#goods_name').val(name);
+        $('#goods_id').val(id);
+        layer.closeAll();
     }
 
     // $(function () {
