--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -185,7 +185,7 @@
 		/*商品-停用*/
 		function goods_stop(obj) {
 			var id = $(obj).parents('.td-manage').data('id');
-			layer.confirm('确认要下架商品吗？', function (index) {
+			layer.confirm('确认要下架优惠券吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
 				$.post('/admin/goods/edit_status_goods',{status:2,goods_id:id},function(res){
 					// var res = JSON.parse(res);
@@ -206,7 +206,7 @@
 		/*商品-启用*/
 		function goods_start(obj) {
 			var id = $(obj).parents('.td-manage').data('id');
-			layer.confirm('确认要上架商品吗？', function (index) {
+			layer.confirm('确认要启用优惠券吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
 				$.post('/admin/goods/edit_status_goods',{status:1,goods_id:id},function(res){
 					// var res = JSON.parse(res);
