增加：手机端 登录页忘记密码链接

--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -75,7 +75,7 @@
 					<!--注册账号-->
 					<div class="registerButton" onclick="window.location.href = '/mobile/index/register'">注册账号</div>
 					<!--忘记密码-->
-					<div class="forgetButton" onclick="">忘记密码</div>
+					<div class="forgetButton" onclick="window.location.href = '/mobile/index/edit_password'">忘记密码</div>
 				</div>
 			</div>
 			<!--'登录' 按钮-->
